// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleRecipeCard/> install should install rule and rules in sections on click 1`] = `
[
  [
    {
      "name": "fooSection",
      "private": false,
    },
  ],
]
`;

exports[`<RuleRecipeCard/> install should install rule and rules in sections on click 2`] = `
[
  [
    {
      "code": "",
      "code_ast": {},
      "created_datetime": "2020-01-01T00:00:00",
      "deactivated_datetime": null,
      "description": "foo",
      "event_types": "ticket-created",
      "id": 1,
      "name": "[Auto Tag] my rule",
      "priority": 100,
      "type": "user",
      "updated_datetime": "2020-01-01T00:00:00",
      "uri": "/api/rule/17",
    },
  ],
]
`;

exports[`<RuleRecipeCard/> install should install rule and rules in sections on click 3`] = `
[
  [
    {
      "category": null,
      "created_datetime": "2017-07-31T21:43:10.610368+00:00",
      "deactivated_datetime": null,
      "decoration": null,
      "fields": [
        "details",
        "tags",
        "customer",
        "created",
      ],
      "filters": "neq(ticket.status, "closed")",
      "filters_ast": {
        "body": [
          {
            "expression": {
              "arguments": [
                {
                  "computed": false,
                  "loc": {
                    "end": {
                      "column": 17,
                      "line": 1,
                    },
                    "start": {
                      "column": 4,
                      "line": 1,
                    },
                  },
                  "object": {
                    "loc": {
                      "end": {
                        "column": 10,
                        "line": 1,
                      },
                      "start": {
                        "column": 4,
                        "line": 1,
                      },
                    },
                    "name": "ticket",
                    "type": "Identifier",
                  },
                  "property": {
                    "loc": {
                      "end": {
                        "column": 17,
                        "line": 1,
                      },
                      "start": {
                        "column": 11,
                        "line": 1,
                      },
                    },
                    "name": "status",
                    "type": "Identifier",
                  },
                  "type": "MemberExpression",
                },
                {
                  "loc": {
                    "end": {
                      "column": 27,
                      "line": 1,
                    },
                    "start": {
                      "column": 19,
                      "line": 1,
                    },
                  },
                  "raw": ""closed"",
                  "type": "Literal",
                  "value": "closed",
                },
              ],
              "callee": {
                "loc": {
                  "end": {
                    "column": 3,
                    "line": 1,
                  },
                  "start": {
                    "column": 0,
                    "line": 1,
                  },
                },
                "name": "neq",
                "type": "Identifier",
              },
              "loc": {
                "end": {
                  "column": 28,
                  "line": 1,
                },
                "start": {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "CallExpression",
            },
            "loc": {
              "end": {
                "column": 28,
                "line": 1,
              },
              "start": {
                "column": 0,
                "line": 1,
              },
            },
            "type": "ExpressionStatement",
          },
        ],
        "loc": {
          "end": {
            "column": 28,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "sourceType": "script",
        "type": "Program",
      },
      "group_by": null,
      "id": 7,
      "name": "New & Open Tickets",
      "order_by": "updated",
      "order_dir": "desc",
      "search": null,
      "section_id": 1,
      "slug": "new-&-open-tickets",
      "type": "ticket-list",
      "uri": "/api/views/7/",
      "visibility": "public",
    },
  ],
]
`;

exports[`<RuleRecipeCard/> install should install rule and rules in sections on click 4`] = `
[
  [
    {
      "created_datetime": "2021-01-21T13:10:46.444928+00:00",
      "decoration": null,
      "deleted_datetime": null,
      "description": null,
      "id": 2,
      "name": "billing",
      "uri": "/api/tags/2/",
      "usage": 10,
    },
  ],
  [
    {
      "created_datetime": "2021-01-21T13:10:46.435364+00:00",
      "decoration": null,
      "deleted_datetime": null,
      "description": null,
      "id": 1,
      "name": "refund",
      "uri": "/api/tags/1/",
      "usage": 20,
    },
  ],
  [
    {
      "created_datetime": "2021-01-21T13:10:46.446673+00:00",
      "decoration": null,
      "deleted_datetime": null,
      "description": null,
      "id": 4,
      "name": "refund accepted",
      "uri": "/api/tags/4/",
      "usage": 0,
    },
  ],
  [
    {
      "created_datetime": "2021-01-21T13:10:46.445859+00:00",
      "decoration": null,
      "deleted_datetime": null,
      "description": null,
      "id": 3,
      "name": "rejected",
      "uri": "/api/tags/3/",
      "usage": 0,
    },
  ],
]
`;

exports[`<RuleRecipeCard/> install should install rule on click 1`] = `
[
  [
    {
      "code": "",
      "code_ast": {},
      "created_datetime": "2020-01-01T00:00:00",
      "deactivated_datetime": null,
      "description": "foo",
      "event_types": "ticket-created",
      "id": 1,
      "name": "[Auto Tag] my rule",
      "priority": 100,
      "type": "user",
      "updated_datetime": "2020-01-01T00:00:00",
      "uri": "/api/rule/17",
    },
  ],
]
`;

exports[`<RuleRecipeCard/> install should install rule on click 2`] = `
[
  [
    {
      "category": null,
      "created_datetime": "2017-07-31T21:43:10.610368+00:00",
      "deactivated_datetime": null,
      "decoration": null,
      "fields": [
        "details",
        "tags",
        "customer",
        "created",
      ],
      "filters": "neq(ticket.status, "closed")",
      "filters_ast": {
        "body": [
          {
            "expression": {
              "arguments": [
                {
                  "computed": false,
                  "loc": {
                    "end": {
                      "column": 17,
                      "line": 1,
                    },
                    "start": {
                      "column": 4,
                      "line": 1,
                    },
                  },
                  "object": {
                    "loc": {
                      "end": {
                        "column": 10,
                        "line": 1,
                      },
                      "start": {
                        "column": 4,
                        "line": 1,
                      },
                    },
                    "name": "ticket",
                    "type": "Identifier",
                  },
                  "property": {
                    "loc": {
                      "end": {
                        "column": 17,
                        "line": 1,
                      },
                      "start": {
                        "column": 11,
                        "line": 1,
                      },
                    },
                    "name": "status",
                    "type": "Identifier",
                  },
                  "type": "MemberExpression",
                },
                {
                  "loc": {
                    "end": {
                      "column": 27,
                      "line": 1,
                    },
                    "start": {
                      "column": 19,
                      "line": 1,
                    },
                  },
                  "raw": ""closed"",
                  "type": "Literal",
                  "value": "closed",
                },
              ],
              "callee": {
                "loc": {
                  "end": {
                    "column": 3,
                    "line": 1,
                  },
                  "start": {
                    "column": 0,
                    "line": 1,
                  },
                },
                "name": "neq",
                "type": "Identifier",
              },
              "loc": {
                "end": {
                  "column": 28,
                  "line": 1,
                },
                "start": {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "CallExpression",
            },
            "loc": {
              "end": {
                "column": 28,
                "line": 1,
              },
              "start": {
                "column": 0,
                "line": 1,
              },
            },
            "type": "ExpressionStatement",
          },
        ],
        "loc": {
          "end": {
            "column": 28,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "sourceType": "script",
        "type": "Program",
      },
      "group_by": null,
      "id": 7,
      "name": "New & Open Tickets",
      "order_by": "updated",
      "order_dir": "desc",
      "search": null,
      "section_id": null,
      "slug": "new-&-open-tickets",
      "type": "ticket-list",
      "uri": "/api/views/7/",
      "visibility": "public",
    },
  ],
]
`;

exports[`<RuleRecipeCard/> install should install rule on click 3`] = `
[
  [
    {
      "created_datetime": "2021-01-21T13:10:46.444928+00:00",
      "decoration": null,
      "deleted_datetime": null,
      "description": null,
      "id": 2,
      "name": "billing",
      "uri": "/api/tags/2/",
      "usage": 10,
    },
  ],
  [
    {
      "created_datetime": "2021-01-21T13:10:46.435364+00:00",
      "decoration": null,
      "deleted_datetime": null,
      "description": null,
      "id": 1,
      "name": "refund",
      "uri": "/api/tags/1/",
      "usage": 20,
    },
  ],
  [
    {
      "created_datetime": "2021-01-21T13:10:46.446673+00:00",
      "decoration": null,
      "deleted_datetime": null,
      "description": null,
      "id": 4,
      "name": "refund accepted",
      "uri": "/api/tags/4/",
      "usage": 0,
    },
  ],
  [
    {
      "created_datetime": "2021-01-21T13:10:46.445859+00:00",
      "decoration": null,
      "deleted_datetime": null,
      "description": null,
      "id": 3,
      "name": "rejected",
      "uri": "/api/tags/3/",
      "usage": 0,
    },
  ],
]
`;

exports[`<RuleRecipeCard/> render should open modal on click 1`] = `
<div
  class="card"
>
  <div
    class="header"
  >
    <span
      class="badge badge-secondary"
      style="color: rgb(0, 121, 107); background-color: rgb(234, 255, 239);"
    >
      Auto Tag
    </span>
  </div>
  <div
    class="content"
  >
    <div
      class="title"
    >
      my rule
    </div>
    <div
      class="description"
    >
      foo
    </div>
  </div>
  <div>
    <div
      class="ticketCount"
    >
      Target up to 
      0
       tickets/month
    </div>
  </div>
</div>
`;

exports[`<RuleRecipeCard/> render should render cards for the library 1`] = `
<div
  class="card"
>
  <div
    class="header"
  >
    <span
      class="badge badge-secondary"
      style="color: rgb(0, 121, 107); background-color: rgb(234, 255, 239);"
    >
      Auto Tag
    </span>
  </div>
  <div
    class="content"
  >
    <div
      class="title"
    >
      my rule
    </div>
    <div
      class="description"
    >
      foo
    </div>
  </div>
  <div>
    <div
      class="ticketCount"
    >
      Target up to 
      0
       tickets/month
    </div>
  </div>
</div>
`;

exports[`<RuleRecipeCard/> render should render install check mark on installed automation rule 1`] = `
<div
  class="card"
>
  <div
    class="header"
  >
    <span
      class="badge badge-secondary"
      style="color: rgb(0, 121, 107); background-color: rgb(234, 255, 239);"
    >
      Auto Tag
    </span>
    <img
      alt="installed"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <div
      class="title"
    >
      my rule
    </div>
    <div
      class="description"
    >
      foo
    </div>
  </div>
  <div>
    <div
      class="ticketCount"
    >
      Target up to 
      0
       tickets/month
    </div>
  </div>
</div>
`;
